--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -4,7 +4,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.3'
 }
 
-group = 'ch.wprog'
+group = 'ch.wproglk'
 version = '0.0.1-SNAPSHOT'
 
 java {
