fix: fix typo in basic application config file

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -9,4 +9,4 @@ spring:
 
 rsa:
   private-key: classpath:certs/private.pem
-  public-key: classpath:certs/public.pe
+  public-key: classpath:certs/public.pem
