--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -38,6 +38,10 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+	testImplementation 'com.github.npathai:hamcrest-optional:1.0'
+	testImplementation 'org.hamcrest:hamcrest:2.2'
+	testImplementation 'org.testcontainers:junit-jupiter'
+	testCompileOnly 'org.projectlombok:lombok'
 }
 
 tasks.named('test') {
